--- a/HTML5/video.html
+++ b/HTML5/video.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AUDIO_VIDEO</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
+      <header>
+<nav>
+    <ul>
+        <li><a href="video.html">Video</a></li>
+        <li><a href="from.html">Form</a></li>
+        <li><a href="table.html">Table</a></li>    
+        <li><a href="blog.html">Blog</a></li>
+
+    </ul>
+</nav>
+    </header>
     <h3>Audio</h3>
     <audio controls src="media/sample audio.mp3"></audio>
     <h3>Video</h3>
