--- a/HTML5/from.html
+++ b/HTML5/from.html
@@ -10,10 +10,19 @@
 margin-bottom: 20px;
         }
     </style>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
-    <header>
+      <header>
+<nav>
+    <ul>
+        <li><a href="video.html">Video</a></li>
+        <li><a href="from.html">Form</a></li>
+        <li><a href="table.html">Table</a></li>    
+        <li><a href="blog.html">Blog</a></li>
 
+    </ul>
+</nav>
     </header>
     <main>
 <section>
