--- a/HTML5/emmet.html
+++ b/HTML5/emmet.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmet</title>
 </head>
-
 <body>
     <p><a href="https://docs.emmet.io/cheat-sheet/">Emmet cheat sheet</a></p>
     <!-- main>airticle.blog*3>h3{My Blog $}+p>lorem100 -->
@@ -48,6 +47,14 @@
         <li><a href="" class="menuitem"></a></li>
         <li><a href="" class="menuitem"></a></li>
     </ul>
-</body>
+    <input type="text" required>
+    <input type="text" value="Mir">
+    <input type="text" disabled value="hero1">
+    <input type="text" readonly value="THANKS">
+    <input type="text" placeholder="Your Name">
+    <br>
+    <br>
+    <label for="message-input">message:</label>
+    <textarea name="message:" id="message-input" rows="3" cols="2"></textarea>
 
 </html>
