--- a/HTML5/flex.html
+++ b/HTML5/flex.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="parent">
+    <section class="parent"> 
+        
+         <!-- div.child*20>{child-$} -->
         <div class="child">child-1</div>
         <div class="child">child-2</div>
         <div class="child">child-3</div>
@@ -15,6 +17,19 @@
         <div class="child">child-5</div>
         <div class="child">child-6</div>
         <div class="child">child-7</div>
+        <div class="child">child-8</div>
+        <div class="child">child-9</div>
+        <div class="child">child-10</div>
+        <div class="child">child-11</div>
+        <div class="child">child-12</div>
+        <div class="child">child-13</div>
+        <div class="child">child-14</div>
+        <div class="child">child-15</div>
+        <div class="child">child-16</div>
+        <div class="child">child-17</div>
+        <div class="child">child-18</div>
+        <div class="child">child-19</div>
+        <div class="child">child-20</div>
         
     </section>
 
