--- a/food-restaurant-project/index.html
+++ b/food-restaurant-project/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Good-Food-Restaurant</title>
-    <link rel="stylesheet" href="styles/style.css">
+  <title>Good-Food-Restaurant</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <!-- section>div>p+h1+p+button -->
-     <section id="hero">
-        <div>
-            <p>Savor the Flavors</p>
-            <h1>Experience Culinary Excellence Food Experience</h1>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
-            <button>Shop The Hotest Food</button>
+  <!-- section>div>p+h1+p+button -->
+  <section id="hero">
+    <div>
+      <p>Savor the Flavors</p>
+      <h1>Experience Culinary Excellence Food Experience</h1>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+        literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+      <button>Shop The Hotest Food</button>
+    </div>
+  </section>
+  <section id="card-box">
+    <div class="container">
+      <p class="subtitle">Savor the Flavors</p>
+      <h1>Experience Culinary Excellence Food Experience</h1>
+    </div>
+    <div class="card-container">
+      <div class="card">
+        <div class="image-box">
+          <img src="assets/pizza.png" alt="">
         </div>
-     </section>
+        <div>
+          <span class="shop">Pizza Burg</span>
+        </div>
+        <h1>Up To 50% Off</h1>
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+      </small>
+      <button>Watch All Sell</button>
+      </div>
+      <div class="card">
+        <div class="image-box">
+          <img src="assets/pizza.png" alt="">
+        </div>
+        <div>
+          <span class="shop">Pizza Burg</span>
+        </div>
+        <h1>Up To 50% Off</h1>
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+      </small>
+      <button>Watch All Sell</button>
+      </div>
+      <div class="card">
+        <div class="image-box">
+          <img src="assets/pizza.png" alt="">
+        </div>
+        <div>
+          <span class="shop">Pizza Burg</span>
+        </div>
+        <h1>Up To 50% Off</h1>
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+      </small>
+      <button>Watch All Sell</button>
+      </div>
+    </div>
+    </div>
+  </section>
 </body>
+
 </html>
